--- a/triviaQuirkProject/src/main/java/com/proyecto/triviaquirkproject/GameMode.form
+++ b/triviaQuirkProject/src/main/java/com/proyecto/triviaquirkproject/GameMode.form
@@ -65,6 +65,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Solitario"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSolitarioActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnMultijugador">
       <Properties>
