--- a/triviaQuirkProject/src/main/java/com/proyecto/triviaquirkproject/MainJF.form
+++ b/triviaQuirkProject/src/main/java/com/proyecto/triviaquirkproject/MainJF.form
@@ -72,6 +72,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Empezar Partida"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnJugarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnListaJugadores">
       <Properties>
