--- a/triviaQuirkProject/src/main/java/com/proyecto/triviaquirkproject/GameSelection.form
+++ b/triviaQuirkProject/src/main/java/com/proyecto/triviaquirkproject/GameSelection.form
@@ -100,6 +100,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Siguiente"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSiguienteActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
