--- a/triviaQuirkProject/src/main/java/com/proyecto/triviaquirkproject/GameMode.form
+++ b/triviaQuirkProject/src/main/java/com/proyecto/triviaquirkproject/GameMode.form
@@ -73,6 +73,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Multijugador"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnMultijugadorActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
